--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome ImNyang's Universe</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Apple_logo_black.svg/800px-Apple_logo_black.svg.png">
+  <link rel="shortcut icon" type="image/x-icon" href="icon.png">
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
