오타 수정 및 하이퍼 링크 수정

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="stackedit__html">
       <h2 id="main-page">Main Page</h2>
 <h3 id="안녕하세요-👋">안녕하세요! 👋</h3>
-<p>간단한거 개발하는 ImNyang입니다. 대부분 Public 깃이라 활용해도 좋습니다. (활용할게 없긴함)</p>
-<p><strong><a href="https://google.com,">GitHub Link!</a></strong></p>
+<p>평범한 세상을 바꿔보고 싶은 ImNyang입니다.</p>
+<p><strong><a href="https://github.com/imnyang">GitHub Link!</a></strong></p>
 <hr>
 <h3 id="몇개를-개발하고-있는데-혹시-보실래요">몇개를 개발하고 있는데 혹시 보실래요?</h3>
 <p>별건 아니고 간단한거에요!</p>
@@ -57,7 +57,7 @@ Email: <strong><a href="mailto:nyang.nyanglab@gmail.com">nyang.nyanglab@gmail.co
 <strong><a href="https://imnyang.carrd.co/">https://imnyang.carrd.co/</a></strong></p>
 <hr>
 <blockquote>
-<p>© ImNyang, All rights reserved.</p>
+<p>© ImNyang, All rights reserved.</p>
 </blockquote>
 
     </div>
