--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="stackedit__html">
       <h2 id="main-page">Main Page</h2>
 <h3 id="안녕하세요-👋">안녕하세요! 👋</h3>
-<p>평범한 세상을 바꿔보고 싶은 ImNyang입니다.</p>
+<p>그냥 평범한 개발자 ImNyang입니다.</p>
 <p><strong><a href="https://github.com/imnyang">GitHub Link!</a></strong></p>
 <hr>
 <h3 id="몇개를-개발하고-있는데-혹시-보실래요">몇개를 개발하고 있는데 혹시 보실래요?</h3>
@@ -58,6 +58,7 @@ Email: <strong><a href="mailto:nyang.nyanglab@gmail.com">nyang.nyanglab@gmail.co
 <hr>
 <blockquote>
 <p>© ImNyang, All rights reserved.</p>
+<p>Email : <strong><a href="mailto:nyang.nyanglab@gmail.com">nyang.nyanglab@gmail.com</a></strong></p>
 </blockquote>
 
     </div>
