--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Email: <strong><a href="mailto:nyang.nyanglab@gmail.com">nyang.nyanglab@gmail.co
 <hr>
 <blockquote>
 <p>© ImNyang, All rights reserved.</p>
-<p>Email : <strong><a href="mailto:imnyang@imnyang.kro.kr">imnyang@imnyang.kro.kr</a></strong></p>
+<p>Email : <strong><a href="mailto:imnyang@nyanglab.kro.kr">imnyang@nyanglab.kro.kr</a></strong></p>
 </blockquote>
 
     </div>
