--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <hr>
 <h3 id="문의나-저와-연락할-일이-있다구요">문의나 저와 연락할 일이 있다구요?</h3>
 <p>Discord: <strong>imnyang_#4337</strong><br>
-Email: <strong><a href="mailto:nyang.nyanglab@gmail.com">nyang.nyanglab@gmail.com</a></strong><br>
+Email: <strong><a href="mailto:imnyang@nyanglab.kro.kr">imnyang@nyanglab.kro.kr</a></strong><br>
 이건 극 소수라고요! 다른 것도 알려드릴까요?<br>
 <strong><a href="https://imnyang.carrd.co/">https://imnyang.carrd.co/</a></strong></p>
 <hr>
